; ModuleID = '/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/spi/static/src/extr_drv_spi_mapping.c_DRV_SPI_BufferAddWriteRead2.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/spi/static/src/extr_drv_spi_mapping.c_DRV_SPI_BufferAddWriteRead2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DRV_SPI_BUFFER_HANDLE_INVALID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @DRV_SPI_BufferAddWriteRead2(i32 %0, i8* %1, i64 %2, i8* %3, i64 %4, i32 %5, i8* %6, i32* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32, align 4
  store i32 %0, i32* %9, align 4
  store i8* %1, i8** %10, align 8
  store i64 %2, i64* %11, align 8
  store i8* %3, i8** %12, align 8
  store i64 %4, i64* %13, align 8
  store i32 %5, i32* %14, align 4
  store i8* %6, i8** %15, align 8
  store i32* %7, i32** %16, align 8
  %19 = load i32, i32* %9, align 4
  %20 = and i32 %19, 255
  %21 = sext i32 %20 to i64
  store i64 %21, i64* %17, align 8
  %22 = load i64, i64* %17, align 8
  switch i64 %22, label %32 [
    i64 128, label %23
  ]

23:                                               ; preds = %8
  %24 = load i8*, i8** %10, align 8
  %25 = load i64, i64* %11, align 8
  %26 = load i8*, i8** %12, align 8
  %27 = load i64, i64* %13, align 8
  %28 = load i32, i32* %14, align 4
  %29 = load i8*, i8** %15, align 8
  %30 = load i32*, i32** %16, align 8
  %31 = call i32 @DRV_SPI0_BufferAddWriteRead2(i8* %24, i64 %25, i8* %26, i64 %27, i32 %28, i8* %29, i32* %30)
  store i32 %31, i32* %18, align 4
  br label %34

32:                                               ; preds = %8
  %33 = load i32, i32* @DRV_SPI_BUFFER_HANDLE_INVALID, align 4
  store i32 %33, i32* %18, align 4
  br label %34

34:                                               ; preds = %32, %23
  %35 = load i32, i32* %18, align 4
  ret i32 %35
}

declare dso_local i32 @DRV_SPI0_BufferAddWriteRead2(i8*, i64, i8*, i64, i32, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
